Varios cambios backend
